<resources>
    <string name="app_name">Live Pinzano</string>
    <string name="punti_di_interesse">Points of interests</string>
    <string name="Categorie">Categories</string>
    <string name="messaggio_permessi_accettati">All necessary authorisations for the app have been accepted!</string>
    <string name="messaggio_permesso_di_archiviazione_non_accettato">STORAGE AUTHORISATION NOT ACCEPTED\n\nIt is necessary to store map tiles to reduce internet data usage and for offline usage.\n*** Without accepting this authorisation, the map OpenStreetMaps will not be available. ***</string>
    <string name="messaggio_permesso_di_localizzazione_non_accettato">STORAGE AUTHORISATION NOT ACCEPTED\n\nIt is necessary to show the location of the user on the map.</string>
    <string name="normale">Normal</string>
    <string name="satellitare">Satellite</string>
    <string name="ibrida">Hybrid</string>
    <string name="rilievo">Terrain</string>
    <string name="ciclabile">Cycle lane</string>
    <string name="trasporti">Transport</string>
    <string name="tocca_qui_per_maggiori_dettagli">Tap here for more details…</string>
    <string name="tocca_pin_per_maggiori_dettagli">Tap pins for more details…</string>
    <string name="indirizzo">Address:</string>
    <string name="telefono">Telephone:</string>
    <string name="fax">Fax:</string>
    <string name="cellulare">Cellular phone:</string>
    <string name="email">Email:</string>
    <string name="video">Video:</string>
    <string name="vedi_su">SEE ON</string>
    <string name="descrizione">DESCRIPTION</string>
    <string name="indirizzo_copiato_negli_appunti">Address copied to clipboard!</string>
    <string name="fax_copiato_negli_appunti">Fax copied to clipboard!</string>
    <string name="invia_email_a">"Send email to "</string>
    <string name="usando">" using:"</string>
    <string name="messaggio_permesso_di_chiamata_non_accettato">PERMISSION TO CALL NOT ACCEPTED\n\nYou need to call the phone number just requested.</string>
    <string name="chiamare_il_numero">Call the number </string>
    <string name="chiama">Call</string>
    <string name="no">No</string>
    <string name="immagine">Image</string>
    <string name="di">of</string>
    <string name="esporta_traccia">EXPORT GPS TRACK</string>
    <string name="traccia_kml">KML format</string>
    <string name="traccia_kmz">KMZ format</string>
    <string name="app_non_trovata">No app found to open this kind of file.</string>
    <string name="landscape">Landscape</string>
    <string name="outdoors">Outdoors</string>
</resources>
