<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:compat="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuMappaNormleOSM"
        compat:showAsAction="never"
        android:title="@string/normale" />
    <item
        android:id="@+id/menuMappaCiclabileOSM"
        compat:showAsAction="never"
        android:title="@string/ciclabile"/>
    <item
        android:id="@+id/menuMappaTrasportiOSM"
        compat:showAsAction="never"
        android:title="@string/trasporti"/>
    <item
        android:id="@+id/menuMappaLandscapeOSM"
        compat:showAsAction="never"
        android:title="@string/landscape"/>
    <item
        android:id="@+id/menuMappaOutdoorsOSM"
        compat:showAsAction="never"
        android:title="@string/outdoors"/>
</menu>