<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dcsoft.somsipinzano.PdiDettaglioFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/svContenitore">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <TextView
                android:text="@string/descrizione"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal|bold"
                android:textColor="@color/colorPrimaryText"
                android:paddingStart="10dp"
                android:paddingBottom="10dp"
                android:id="@+id/tvIntestazioneDescrizione"
                android:textAlignment="center" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvDescrizione"
                android:textColor="@color/colorPrimaryText"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/llIndirizzo">

                <TextView
                    android:text="@string/indirizzo"
                    android:layout_height="match_parent"
                    android:textColor="@color/colorPrimaryText"
                    android:textStyle="normal|bold"
                    android:textAlignment="textEnd"
                    android:textSize="12sp"
                    android:paddingStart="5dp"
                    android:layout_width="80dp"
                    android:gravity="center_vertical" />

                <Button
                    android:text="indirizzo"
                    android:layout_width="match_parent"
                    android:id="@+id/btIndirizzo"
                    android:textSize="11sp"
                    android:layout_gravity="center"
                    android:layout_height="34dp"
                    android:textAllCaps="false" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/llTelefono">

                <TextView
                    android:text="@string/telefono"
                    android:layout_height="match_parent"
                    android:textColor="@color/colorPrimaryText"
                    android:textStyle="normal|bold"
                    android:textAlignment="textEnd"
                    android:textSize="12sp"
                    android:paddingStart="5dp"
                    android:layout_width="80dp"
                    android:gravity="center_vertical" />

                <Button
                    android:text="telefono"
                    android:layout_width="match_parent"
                    android:id="@+id/btTelefono"
                    android:textSize="11sp"
                    android:layout_gravity="center"
                    android:layout_height="34dp"
                    android:textAllCaps="false" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/llFax">

                <TextView
                    android:text="@string/fax"
                    android:layout_height="match_parent"
                    android:textColor="@color/colorPrimaryText"
                    android:textStyle="normal|bold"
                    android:textAlignment="textEnd"
                    android:textSize="12sp"
                    android:paddingStart="5dp"
                    android:layout_width="80dp"
                    android:gravity="center_vertical" />

                <Button
                    android:text="fax"
                    android:layout_width="match_parent"
                    android:id="@+id/btFax"
                    android:textSize="11sp"
                    android:layout_gravity="center"
                    android:layout_height="34dp"
                    android:textAllCaps="false" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/llCellulare">

                <TextView
                    android:text="@string/cellulare"
                    android:layout_height="match_parent"
                    android:textColor="@color/colorPrimaryText"
                    android:textStyle="normal|bold"
                    android:textAlignment="textEnd"
                    android:textSize="12sp"
                    android:paddingStart="5dp"
                    android:layout_width="80dp"
                    android:gravity="center_vertical" />

                <Button
                    android:text="cellulare"
                    android:layout_width="match_parent"
                    android:id="@+id/btCellulare"
                    android:textSize="11sp"
                    android:layout_gravity="center"
                    android:layout_height="34dp"
                    android:textAllCaps="false" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/llEmail">

                <TextView
                    android:text="@string/email"
                    android:layout_height="match_parent"
                    android:textColor="@color/colorPrimaryText"
                    android:textStyle="normal|bold"
                    android:textAlignment="textEnd"
                    android:textSize="12sp"
                    android:paddingStart="5dp"
                    android:layout_width="80dp"
                    android:gravity="center_vertical" />

                <Button
                    android:text="email"
                    android:layout_width="match_parent"
                    android:id="@+id/btEmail"
                    android:textSize="11sp"
                    android:layout_gravity="center"
                    android:layout_height="34dp"
                    android:textAllCaps="false" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/llLink">

                <TextView
                    android:text="titoloLink"
                    android:layout_height="match_parent"
                    android:textColor="@color/colorPrimaryText"
                    android:textStyle="normal|bold"
                    android:textAlignment="textEnd"
                    android:textSize="12sp"
                    android:id="@+id/tvIntestazioneLink"
                    android:paddingStart="5dp"
                    android:layout_width="80dp"
                    android:gravity="center_vertical" />

                <Button
                    android:text="link"
                    android:layout_width="match_parent"
                    android:id="@+id/btLink"
                    android:textSize="11sp"
                    android:layout_gravity="center"
                    android:layout_height="34dp"
                    android:textAllCaps="false" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/llVideo">

                <TextView
                    android:text="@string/video"
                    android:layout_height="match_parent"
                    android:textColor="@color/colorPrimaryText"
                    android:textStyle="normal|bold"
                    android:textAlignment="textEnd"
                    android:textSize="12sp"
                    android:paddingStart="5dp"
                    android:layout_width="80dp"
                    android:gravity="center_vertical" />

                <Button
                    android:text="video"
                    android:layout_width="match_parent"
                    android:id="@+id/btVideo"
                    android:textSize="11sp"
                    android:layout_gravity="center"
                    android:layout_height="34dp"
                    android:textAllCaps="false" />
            </LinearLayout>

            <TextView
                android:text="@string/vedi_su"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal|bold"
                android:textColor="@color/colorPrimaryText"
                android:paddingStart="10dp"
                android:paddingTop="20dp"
                android:textAlignment="center" />

            <Button
                android:text="Google Maps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bVediSuGM"
                android:textAllCaps="false" />

            <Button
                android:text="OpenStreetMap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bVediSuOSM"
                android:textAllCaps="false" />
        </LinearLayout>>
    </ScrollView>
</FrameLayout>
